--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<title>Todo List</title>
 	
 	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
+
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+
+	<link rel="stylesheet" href="assets/css/font-awesome/css/font-awesome.min.css">
 	
 	<script type="text/javascript" src="assets/js/lib/jquery-3.1.1.min.js"></script>
+
 </head>
 
 <body>
 
 	<div id="container">
 
-		<h1>To-Do List</h1>
+		<h1>To-Do List <i class="fa fa-plus"></i></h1>
 
-		<input type="text" name="">
+		<input type="text" placeholder="Add New Todo">
 
 		<ul>
-			<li><span>X</span> Go to store</li>
-			<li><span>X</span> Buy chicken</li>
-			<li><span>X</span> Visit grandma</li>
+			<li><span><i class="fa fa-trash"></i></span> Go to store</li>
+			<li><span><i class="fa fa-trash"></i></span> Buy chicken</li>
+			<li><span><i class="fa fa-trash"></i></span> Visit grandma</li>
 		</ul>
 		
 	</div>
